--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,11 @@
         "railken/bag": "^1.2",
         "railken/laravel-manager": "^3.1",
         "railken/lara-ore-api": "dev-master",
-        "railken/lara-ore-support": "dev-master",
-        "railken/lara-ore-user": "dev-master"
+        "railken/lara-ore-support": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "~7.0",
-        "phpstan/phpstan": "^0.9",
+        "phpstan/phpstan": "^0.10",
         "orchestra/testbench": "~3.6",
         "friendsofphp/php-cs-fixer": "^2.8"
     },
