--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "license": "MIT",
     "require": {
         "php": ">=7.1",
-        "railken/amethyst-common": "0.1.*"
+        "railken/amethyst-common": "0.1.*",
+        "railken/amethyst-foo": "0.1.*"
     },
     "require-dev": {
         "phpunit/phpunit": "~7.0",
@@ -24,6 +25,10 @@
         }
     },
     "extra": {
+        "amethyst": {
+            "package": "taxonomy",
+            "namespace": "Railken\\Amethyst"
+        },
         "laravel": {
             "providers": [
                 "Railken\\Amethyst\\Providers\\TaxonomyServiceProvider"
