--- a/composer.json
+++ b/composer.json
@@ -4,14 +4,14 @@
     "license": "MIT",
     "require": {
         "php": ">=7.1",
-        "railken/amethyst-common": "0.1.*",
-        "railken/amethyst-foo": "0.1.*"
+        "railken/amethyst-common": "0.1.*"
     },
     "require-dev": {
         "phpunit/phpunit": "~7.0",
         "phpstan/phpstan": "^0.10",
         "orchestra/testbench": "3.6.*",
-        "friendsofphp/php-cs-fixer": "^2.8"
+        "friendsofphp/php-cs-fixer": "^2.8",
+        "railken/amethyst-foo": "0.1.*"
     },
     "autoload": {
         "psr-4" : {
