--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,26 @@
 {
-    "name": "railken/amethyst-taxonomy",
+    "name": "amethyst/taxonomy",
     "keywords": ["api"],
     "license": "MIT",
     "require": {
         "php": ">=7.1",
-        "railken/amethyst-common": "0.1.*"
+        "amethyst/common": "0.1.*"
     },
     "require-dev": {
         "phpunit/phpunit": "~7.1",
         "orchestra/testbench": "3.*",
         "friendsofphp/php-cs-fixer": "^2.8",
-        "railken/amethyst-foo": "0.1.*"
+        "amethyst/foo": "0.1.*"
     },
     "autoload": {
         "psr-4" : {
-            "Railken\\Amethyst\\" : "src/",
-            "Railken\\Amethyst\\Database\\Seeds\\": "database/seeds/"
+            "Amethyst\\" : "src/",
+            "Amethyst\\Database\\Seeds\\": "database/seeds/"
         }
     },
     "autoload-dev": {
         "psr-4": { 
-            "Railken\\Amethyst\\Tests\\": "tests/" 
+            "Amethyst\\Tests\\": "tests/" 
         }
     },
     "extra": {
@@ -30,7 +30,7 @@
         },
         "laravel": {
             "providers": [
-                "Railken\\Amethyst\\Providers\\TaxonomyServiceProvider"
+                "Amethyst\\Providers\\TaxonomyServiceProvider"
             ]
         }
     }
